--- a/package.json
+++ b/package.json
@@ -3,20 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "TAILWIND_MODE=watch next",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
+  "browserslist": [
+    "> 1%"
+  ],
   "dependencies": {
+    "@headlessui/react": "^1.4.1",
+    "@heroicons/react": "^1.0.4",
+    "@tailwindcss/forms": "^0.3.4",
+    "autoprefixer": "^10.3.7",
+    "babel-plugin-preval": "^5.0.0",
     "next": "11.1.2",
+    "postcss": "^8.3.9",
+    "postcss-focus-visible": "^6.0.1",
+    "postcss-import": "^14.0.2",
+    "postcss-nested": "^5.0.6",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "tailwindcss": "^2.2.16"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.15.8",
     "@types/react": "17.0.28",
-    "eslint": "8.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "7.23.0",
     "eslint-config-next": "11.1.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "prettier": "^2.4.1",
     "typescript": "4.4.3"
   }
 }
