--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.4",
+    "@metamask/providers": "^8.1.1",
     "@tailwindcss/forms": "^0.3.4",
     "autoprefixer": "^10.3.7",
     "babel-plugin-preval": "^5.0.0",
