--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "tailwindcss": "^2.2.16",
-    "web3": "^1.6.0"
+    "web3": "^1.6.0",
+    "web3-eth": "^1.6.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.15.8",
