--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.4",
+    "@metamask/providers": "^8.1.1",
     "@tailwindcss/forms": "^0.3.4",
     "autoprefixer": "^10.3.7",
     "babel-plugin-preval": "^5.0.0",
@@ -25,7 +26,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "tailwindcss": "^2.2.16",
-    "web3": "^1.6.0"
+    "web3": "^1.6.0",
+    "web3-eth": "^1.6.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.15.8",
